--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,11 @@
 on: [push]
-
 name: build
-
 jobs:
   build-rust-wgpu:
     name: Rust project
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Install latest nightly
         uses: actions-rs/toolchain@v1
         with:
@@ -15,35 +13,14 @@ jobs:
             override: true
             components: rustfmt, clippy
 
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: install wasm-pack
-
-name: Build wgpu
-run-name: building 
-on: [push]
-jobs:
-  build-rust-wgpu:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-      - name: Homework 1
+      - name: Install wasm-pack 
         run: |
-          java --version
-          java homework/01/src/Main.java
-      - name: Build with Maven
-        run: |
-          chmod +x ./cicd/build.sh
+          curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
           ./cicd/build.sh
-      - name: Archive build
-        uses: actions/upload-artifact@v3
-        with:
-          name: ElectronicShop
-          path: dist/ElectronicShop.jar
 
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          GITHUB_TOKEN: ${{ github.TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist
